--- a/src/index.css
+++ b/src/index.css
@@ -1,65 +1,65 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-}
+@custom-variant dark (&:is(.dark *));
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  width: 900px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
+@layer base {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 210 40% 96.1%;
+    --background: 0 0% 100%;
+    --border: 214.3 31.8% 91.4%;
+    --card-foreground: 222.2 84% 4.9%;
+    --card: 0 0% 100%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+    --destructive-foreground: 210 40% 98%;
+    --destructive: 0 84.2% 60.2%;
+    --foreground: 222.2 84% 4.9%;
+    --input: 214.3 31.8% 91.4%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+    --muted: 210 40% 96.1%;
+    --popover-foreground: 222.2 84% 4.9%;
+    --popover: 0 0% 100%;
+    --primary-foreground: 210 40% 98%;
+    --primary: 221.2 83.2% 53.3%;
+    --radius: 0.3rem;
+    --ring: 221.2 83.2% 53.3%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 210 40% 96.1%;
   }
-  a:hover {
-    color: #747bff;
+
+  .dark {
+    --accent-foreground: 210 40% 98%;
+    --accent: 217.2 32.6% 17.5%;
+    --background: 222.2 84% 4.9%;
+    --border: 217.2 32.6% 17.5%;
+    --card-foreground: 210 40% 98%;
+    --card: 222.2 84% 4.9%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+    --destructive-foreground: 210 40% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --foreground: 210 40% 98%;
+    --input: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+    --muted: 217.2 32.6% 17.5%;
+    --popover-foreground: 210 40% 98%;
+    --popover: 222.2 84% 4.9%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: 217.2 91.2% 59.8%;
+    --ring: 224.3 76.3% 48%;
+    --secondary-foreground: 210 40% 98%;
+    --secondary: 217.2 32.6% 17.5%;
   }
-  button {
-    background-color: #f9f9f9;
-  }
+}
+
+a.active {
+  @apply dark:text-blue-400 text-blue-700;
 }
